fix: button problem with tap on mobile device

--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ header, .score-message-box {
   
 }
 
-.btn {
+.btn,
+.reset-btn {
   width: 100px;
   height: 100px;
   background-color: #2b313b;
@@ -60,20 +61,21 @@ header, .score-message-box {
   transition: all 0.2s ease;
   box-shadow: rgb(28, 27, 28) 6px 6px 3px 3px;
   border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  -webkit-tap-highlight-color: transparent;
+  transition: transform 0.4s ease-out, box-shadow 0.4s ease-out, background-color 0.2s;
 }
 
-@media (hover: hover) {
-  .btn:hover {
-    background-color: #353d4a;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    transform: translateY(-2px);
-  }
-}
-
-.btn:active {
-  transform: translateY(1px);
+.btn:active,
+.reset-btn:active {
+  transform: translateY(3px) scale(0.95) !important;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
+  transition: transform 0s;
+  background-color: #1f242d !important;
 }
+
 
 .reset-container {
   display: flex;
@@ -141,6 +143,19 @@ footer a {
 footer a:hover {
   color: #21a1f1;
   text-decoration: underline;
+}
+
+
+@media (hover: hover) and (pointer: fine) {
+  .btn, .reset-btn {
+    transition: transform 0.1s ease-out, box-shadow 0.1s ease-out;
+  }
+  .btn:hover,
+  .reset-btn:hover {
+    background-color: #353d4a;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transform: translateY(-2px);
+  }
 }
 
 
